fix: add missing text-align style

--- a/basic-css-two/css/style.css
+++ b/basic-css-two/css/style.css
@@ -15,6 +15,7 @@ section h1 {
   font-size: 30px;
   color: gold;
   font-family: 'Source Sans Pro', sans-serif;
+  text-align: center;
 }
 
 footer {
